# aruco-ground-truth-library

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/ArucoGroundTruthLibrary/: CMakeLists.txt
src/ArucoGroundTruthLibrary/include/ArucoGroundTruthLibrary/: ArucoBoardMeasurement.h  ArucoMarkerMeasurement.h  ArucoMeasurement.h  ReverseLinkMeasurement.h  ThreePointReverseLinkMeasurement.h  TunableReverseLinkMeasurement.h
src/ArucoGroundTruthLibrary/src/: ArucoBoardMeasurement.cpp  ArucoMarkerMeasurement.cpp  ArucoMeasurement.cpp  ReverseLinkMeasurement.cpp  ThreePointReverseLinkMeasurement.cpp  TunableReverseLinkMeasurement.cpp
src/camera-library/: CMakeLists.txt
src/camera-library/include/: Camera.h  CameraParameters.h  YarpCamera.h  iCubCamera.h  iCubCameraRelative.h  iCubCameraRelativeExternal.h
src/camera-library/src/: Camera.cpp  CameraParameters.cpp  YarpCamera.cpp  iCubCamera.cpp  iCubCameraRelative.cpp  iCubCameraRelativeExternal.cpp
src/ground-truth-library/: CMakeLists.txt  model_extrinsic.txt
src/ground-truth-library/include/: ArucoBoardMeasurement.h  ArucoMarkerMeasurement.h  ArucoMeasurement.h  ReverseLinkMeasurement.h  ThreePointReverseLinkMeasurement.h
src/ground-truth-library/src/: ArucoBoardMeasurement.cpp  ArucoMarkerMeasurement.cpp  ArucoMeasurement.cpp  ReverseLinkMeasurement.cpp  ThreePointReverseLinkMeasurement.cpp
src/ground-truth-module/: CMakeLists.txt
src/ground-truth-module/src/: TestArucoMeasurement.cpp  TestCamera.cpp  TestCameraLog.cpp  TestCameraLogRead.cpp  TestExtrinsicAruco.cpp  TestReverseLinkMeasurement.cpp  TestSuperimposition.cpp  TestTrainedModel.cpp  TestVisualization.cpp  iCubExtrinsicCalibrationCollector.cpp  iCubExtrinsicCalibrationProcessor.cpp  iCubExtrinsicCalibrationTrain.cpp  plot.py
src/icub-fingers-encoders/: CMakeLists.txt
src/icub-fingers-encoders/config/: analogs_configuration.ini
src/icub-fingers-encoders/include/: iCubFingersEncoders.h
src/icub-fingers-encoders/src/: iCubFingersEncoders.cpp
src/utils-library/: CMakeLists.txt
src/utils-library/include/: Probe.h  ProbeContainer.h  YarpBufferedPort.hpp  YarpImageOfProbe.hpp  YarpVectorOfProbe.hpp
src/utils-library/src/: Probe.cpp  ProbeContainer.cpp
src/viz-library/: CMakeLists.txt
src/viz-library/include/: MeshResources.h  SIiCubHand.h  VtkContainer.h  VtkContent.h  VtkMeshOBJ.h  VtkPointCloud.h  VtkUpdateHandler.h  VtkiCubHand.h  iCubForwardKinematics.h  vtkOBJResource.h
src/viz-library/src/: MeshResources.cpp  SIiCubHand.cpp  VtkContainer.cpp  VtkContent.cpp  VtkMeshOBJ.cpp  VtkPointCloud.cpp  VtkUpdateHandler.cpp  VtkiCubHand.cpp  iCubForwardKinematics.cpp  vtkOBJResource.cpp
